rawsnippets/gloo-vs.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: ${1:virtualservice-name}
  namespace: ${2:gloo-system}
spec:
  virtualHost:
    domains:
      - "*"
    routes:
      - matchers:
          - prefix: /
        routeAction:
          single:
            upstream:
              name: ${3:upstream-name}
              namespace: ${4:gloo-system}
        options:
          prefixRewrite: /
